# notes_ai_agent

./: .coveragerc  .gitreview  .stestr.conf  Dockerfile  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: lint.yml  unit_tests.yml
notes_ai_agent/: __init__.py  cli.py  exceptions.py
notes_ai_agent/common/: constants.py  driver_manager.py
notes_ai_agent/config/: agent_config.py  cli_config.py
notes_ai_agent/db/: base_driver.py  driver_manager.py  local_file.py  sqlite.py
notes_ai_agent/llm/: base_driver.py  driver_manager.py  system_prompts.py
notes_ai_agent/llm/openai/: driver.py
notes_ai_agent/notes/: base.py  constants.py  driver_manager.py  notes_manager.py  obsidian.py
notes_ai_agent/tests/unit/config/: test_agent_config.py
tools/: process_documents.sh
