[metadata]
name = notes_ai_agent
summary = Simple AI Agent used to tag, summarize and do embedding of the markdown notes
description-file =
    README.rst
author = Slawek Kaplonski
author-email = slawek@kaplonski.pl
home-page = https://kaplonski.pl
python-requires = >=3.10
classifier =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    notes_ai_agent
