[metadata]
name = notes_ai_agent
summary = Simple AI Agent used to tag, summarize and do embedding of the markdown notes
description_file =
    README.rst
author = Slawek Kaplonski
author_email = slawek@kaplonski.pl
home_page = https://kaplonski.pl
python_requires = >=3.10
classifier =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    notes_ai_agent

[entry_points]
console_scripts =
    notes_ai_agent = notes_ai_agent.cli:main
notes_ai_agent.db_drivers =
    local_file = notes_ai_agent.db.local_file:LocalFileDBDriver
notes_ai_agent.llm_drivers =
    openai = notes_ai_agent.llm.openai.driver:LLMDriver
notes_ai_agent.note_drivers =
    obsidian = notes_ai_agent.notes.obsidian:ObsidianNote